# XTeam

./: .gitignore  ACTION_ITEMS.md  ANALYSIS_VERIFICATION.md  DEPLOYMENT_CHECKLIST.md  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OBSERVABILITY_GUIDE.md  QUICKSTART.md  README.md  SECURITY_BEST_PRACTICES.md  backend_test.py  backend_test_report.json  comprehensive_test.py  create_structure.sh  quick_test.py  test_api.py  test_report.json  xteam.db
.github/agents/: xteam_developer.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  start.sh  xteam.db
backend/alembic/: env.py
backend/alembic/versions/: 740553ed158c_initial_migration_with_users_projects_.py
backend/app/: main.py  tasks.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  api.py  auth.py  projects.py  websocket.py
backend/app/core/: config.py  database.py  security.py  token_blacklist.py
backend/app/metagpt_integration/: agent_manager.py  file_handler.py  llm_registry.py  streaming.py  task_queue.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py
backend/app/models/: agent_config.py  execution.py  project.py  user.py
backend/app/schemas/: agent_config.py  project.py  user.py  websocket.py
backend/app/services/: agent_service.py  project_service.py
backend/app/websocket/: broadcast.py  connection_manager.py  message_handler.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_agents.py  test_auth.py  test_health_and_middleware.py  test_projects.py  test_websocket.py  test_websocket_security.py
backend/tests/core/: test_app.py
backend/tests/models/: test_models.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/chat/: ChatInterface.tsx  InputBar.tsx  MessageList.tsx
frontend/src/components/common/: Button.tsx  Loader.tsx  Modal.tsx
frontend/src/components/editor/: CodeEditor.tsx  FileTree.tsx  Terminal.tsx
frontend/src/components/preview/: LivePreview.tsx  PreviewControls.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx  ProjectView.tsx  Settings.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/styles/: globals.css
